# slirc-client

./: COVERAGE_IMPROVEMENT.md  Cargo.toml  LAYOUT_SPECIFICATION.md  PHASE2_REPORT.md  README.md  TLS_LIMITATION.md
.github/: copilot-instructions.md
docs/: AUDIT_AND_FORWARD_PATH.md  IMPLEMENTATION_SUMMARY.md  MENU_ARCHITECTURE.md  MODERN_UI_DESIGN_PLAN.md  PHASE_2_3_VISUAL_TEST_REPORT.md  PHASE_4_TOPIC_BAR_SPEC.md
docs/archive/: README.md
src/: app.rs  backend.rs  backend_tests.rs  buffer.rs  commands.rs  config.rs  dialog_manager.rs  events.rs  fonts.rs  input_state.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  protocol.rs  state.rs  validation.rs
src/app/: core.rs  dialogs.rs  events.rs  mod.rs  update.rs
src/app/ui/: input.rs  menus.rs  mod.rs  panels.rs
src/backend/: connection.rs  handlers.rs  main_loop.rs  mod.rs
src/backend/main_loop/: connection.rs  handlers.rs  mod.rs  state.rs
src/ui/: dialogs.rs  menu.rs  messages.rs  mod.rs  panels.rs  quick_switcher.rs  shortcuts.rs  theme.rs  toolbar.rs  topic_bar.rs
src/ui/dialogs/: actions.rs  channel_browser.rs  help.rs  mod.rs  network.rs  nick_change.rs  status_toasts.rs  topic_editor.rs
src/ui/messages/: format.rs  helpers.rs  mod.rs  render.rs
src/ui/panels/: buffer_list.rs  mod.rs  user_list.rs
src/ui/theme/: colors.rs  fonts.rs  mod.rs  widgets.rs
tests/: app_tests.rs  backend_tests.rs  integration_tests.rs
