[package]
name = "slirc-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "slirc_client"
path = "src/lib.rs"

[[bin]]
name = "slirc-client"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }

# Async runtime for the network backend
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }

# IRC Protocol library
slirc-proto = { git = "https://github.com/sid3xyz/slirc-proto.git", features = [
    "tokio",
] }

# Channels for UI <-> Backend communication
crossbeam-channel = "0.5"
chrono = "0.4.42"
regex = "1.12.2"
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "4.0"

# Secure password storage
keyring = "2.3"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-native-certs = "0.8"
webpki-roots = "0.26"
